<resources>
    <string name="app_name">WordCounter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_title">Text title</string>
    <string name="enter_your_text_title">Enter your text title</string>
    <string name="continueM">Continue</string>
    <string name="paste_your_text_here">Paste your text here</string>
    <string name="back">Back</string>
    <string name="word_count">word count:</string>
</resources>