<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/word_count"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/paste_your_text_here"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/bt_back"
        tools:layout_editor_absoluteX="40dp"
        android:inputType="textMultiLine"
        android:lines="20"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="40dp" />



</androidx.constraintlayout.widget.ConstraintLayout>